--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 }
 body {
   margin: 0;
-  padding-top: 158px;
+  padding-top: 154px;
 }
 html {
   scroll-behavior: smooth;
@@ -77,6 +77,7 @@ ul {
 /* ------------------------------------------------------------------------------------------------------------------------------ */
 /* BLACK HEADER */
 .black-header {
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
@@ -103,6 +104,7 @@ ul {
 /* BLACK HEADER */
 /* ORANGE HEADER */
 .orange-header {
+  z-index: 1;
   position: fixed;
   top: 64px;
   left: 0;
@@ -129,3 +131,19 @@ ul {
   outline: none;
 }
 /* ORANGE HEADER */
+/* ------------------------------------------------------------------------------------------------------------------------------ */
+/* BANNER 1  */
+.banner1.bg-image {
+  background-image: url("/images/Homepage/herosection.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 93vh;
+  width: 100%;
+}
+/* BANNER 1  */
+/* PURPLE BUTTON */
+.purple-button {
+  border: none;
+  border-radius: 10px;
+}
+/* PURPLE BUTTON */
