--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -59,6 +59,9 @@ img {
 .color-red {
   color: #fb5e3c;
 }
+.bg-red {
+  background-color: #fb5e3c;
+}
 a {
   color: black;
   text-decoration: none;
@@ -147,3 +150,17 @@ ul {
   border-radius: 10px;
 }
 /* PURPLE BUTTON */
+/* ACCESSIBILITY BUTTON */
+.accessibility-btn {
+  position: fixed;
+  top: 204px;
+  right: 0;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border: none;
+}
+.accessibility-btn:focus {
+  outline: none;
+}
+/* ACCESSIBILITY BUTTON */
+/* ------------------------------------------------------------------------------------------------------------------------------ */
