--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -212,5 +212,16 @@ ul {
   margin-right: 15px;
   margin-bottom: 40px;
 }
+.scroll-section::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+.scroll-section::-webkit-scrollbar-track {
+  background-color: white;
+}
+.scroll-section::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: linear-gradient(red, red);
+}
 /* NEWEST NEWS */
 /* ------------------------------------------------------------------------------------------------------------------------------ */
