--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -225,3 +225,11 @@ ul {
 }
 /* NEWEST NEWS */
 /* ------------------------------------------------------------------------------------------------------------------------------ */
+/* OUR SERVICES */
+.our-serices-img {
+  width: 100%;
+  display: block;
+  opacity: 0.7;
+  max-height: 350px;
+}
+/* OUR SERVICES */
