--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -243,3 +243,16 @@ ul {
   height: 50px;
 }
 /* PARTNERS */
+/* FOOTER */
+.footer-btn {
+  border: 1px solid white;
+}
+.footer-line {
+  background-color: white;
+  width: 90%;
+  margin: 0 auto;
+  height: 2px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+/* FOOTER */
