started the services page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -266,5 +266,9 @@ ul {
 .forKrik-animation:hover {
   background-color: #b8b0da !important;
 }
-
 /* FOR KRIK */
+/* SERVICES */
+.border-bottom-active {
+  border-bottom: 6px solid red;
+}
+/* SERVICES */
