--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -271,4 +271,19 @@ ul {
 .border-bottom-active {
   border-bottom: 6px solid red;
 }
+.services-pic {
+  display: block;
+  width: 100%;
+  max-height: 312px;
+}
+.service-hr {
+  height: 2px;
+  background-color: black;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  bottom: 66px;
+  z-index: -1;
+}
 /* SERVICES */
