--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -279,11 +279,12 @@ ul {
 .service-hr {
   height: 2px;
   background-color: black;
-  width: 90%;
+  width: 85%;
   margin-left: auto;
   margin-right: auto;
   position: absolute;
   bottom: 66px;
+  left: 63px;
   z-index: -1;
 }
 /* SERVICES */
