finished the volunteers page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -288,3 +288,10 @@ ul {
   z-index: -1;
 }
 /* SERVICES */
+.volunteer-projects button {
+  background-color: transparent;
+}
+.volunteer-detail .content {
+  position: absolute;
+  bottom: 20px;
+}
