--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -236,6 +236,7 @@ ul {
   max-height: 350px;
 }
 /* OUR SERVICES */
+/* ------------------------------------------------------------------------------------------------------------------------------ */
 /* PARTNERS */
 .partners-img {
   border-top: 1px solid black;
@@ -246,6 +247,7 @@ ul {
   height: 50px;
 }
 /* PARTNERS */
+/* ------------------------------------------------------------------------------------------------------------------------------ */
 /* FOOTER */
 .footer-btn {
   border: 1px solid white;
@@ -259,6 +261,7 @@ ul {
   margin-bottom: 60px;
 }
 /* FOOTER */
+/* ------------------------------------------------------------------------------------------------------------------------------ */
 /* FOR KRIK */
 .forKrik-animation {
   transition: all 0.3s ease;
@@ -267,6 +270,7 @@ ul {
   background-color: #b8b0da !important;
 }
 /* FOR KRIK */
+/* ------------------------------------------------------------------------------------------------------------------------------ */
 /* SERVICES */
 .border-bottom-active {
   border-bottom: 6px solid red;
@@ -287,6 +291,8 @@ ul {
   left: 63px;
 }
 /* SERVICES */
+/* ------------------------------------------------------------------------------------------------------------------------------ */
+/* VOLUNTEERS */
 .volunteer-projects button {
   background-color: transparent;
 }
@@ -294,3 +300,14 @@ ul {
   position: absolute;
   bottom: 20px;
 }
+/* VOLUNTEERS */
+/* ------------------------------------------------------------------------------------------------------------------------------ */
+/* PROJECTS / PROJECTS DETAIL */
+.projects img {
+  display: block;
+  width: 100%;
+  height: 220px !important;
+}
+
+/* PROJECTS */
+/* ------------------------------------------------------------------------------------------------------------------------------ */
