--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -308,6 +308,23 @@ ul {
   width: 100%;
   height: 220px !important;
 }
-
+.project-detail .project-detail-img {
+  width: 100%;
+  display: block;
+  height: 303px;
+}
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.arrow.right-arrow {
+  right: 0px;
+  width: 50px;
+}
+.arrow.left-arrow {
+  left: 48px;
+  width: 50px;
+}
 /* PROJECTS */
 /* ------------------------------------------------------------------------------------------------------------------------------ */
