working on our team

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -359,3 +359,9 @@ ul {
 }
 /* PROJECTS */
 /* ------------------------------------------------------------------------------------------------------------------------------ */
+.slick-slide > div {
+  margin: 0 30px;
+}
+.scale-image {
+  transform: scale(1.3);
+}
