--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -365,3 +365,10 @@ ul {
 .scale-image {
   transform: scale(1.3);
 }
+.our-team-linkedin-btn {
+  border: none;
+  background-color: #fb5e3c;
+  color: white;
+  border-radius: 10px;
+  padding: 5px 20px;
+}
